--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <main>
 
-    <body style="text-align:center">
+    <body>
         <nav>
             <b>Section Links:</b>
             <a href="#day-1">Day 1</a> |
